--- a/stylesheets/theme.css
+++ b/stylesheets/theme.css
@@ -15,7 +15,10 @@
 	color: #fff;
 }
 
-.lingo-name {color: #daa520; font-family: germania-one, sans-serif}
+.lingo-nameSM {color: #daa520; font-family: germania-one, sans-serif}
+.lingo-nameMD {color: #daa520; font-family: germania-one, sans-serif; padding-top: 64px}
+.title_sub {padding-bottom: 40px}
+.lingo-section-title {color: #daa520; font-family: germania-one, sans-serif}
 
 .bg-black h2, 
 
@@ -87,6 +90,7 @@
 }
 .location-description{color: #7a5380; font-family: alice, sans-serif}
 
+.bg-white.lingo-section-title {}
 .bg-white h2,
 .bg-white h3 
 .bg-white h4,
@@ -95,8 +99,11 @@
 	color: #333;
 }
 
+.bg-white .section-description h3 {font-family: french-canon, sans-serif; font-size: 30px}
+.bg-white .section-content h5{font-family: french-canon, sans-serif; color: #555; font-size: 24px; }
+
 .bg-white .section-title h2 {
-	border: 1px solid #333;
+	border: 1px solid #333; color: #333; font-family: germania-one, sans-serif
 }
 
 .bg-white a {
@@ -172,6 +179,7 @@
 .bg-purple .section-title h2 {
 	border: 1px solid #fff;
 }
+.bg-purple .section-content h5{font-family: french-canon, sans-serif; color: #fff; font-size: 26px; }
 
 .bg-purple a {
 	color: #fff;
