--- a/stylesheets/theme.css
+++ b/stylesheets/theme.css
@@ -13,6 +13,8 @@
 .quickLink:hover {background-color: black}
 .quickLink:focus {background-color: black}
 
+.contact_icon {padding: 20px}
+
 /*** Section Black and Gold ***/
 
 .bg-black {
