--- a/stylesheets/theme.css
+++ b/stylesheets/theme.css
@@ -14,6 +14,8 @@
 .quickLink:focus {background-color: black}
 
 .contact_icon {padding: 20px}
+.hiring-header {font-size: 4em; font-family: overlock, sans-serif; font-style:italic; font-weight: 600}
+.hiring-link {font-size: 1.6em; font-family: french-canon, sans-serif; font-style: normal;}
 
 /*** Section Black and Gold ***/
 
