--- a/stylesheets/theme.css
+++ b/stylesheets/theme.css
@@ -822,8 +822,16 @@ small.error {
 	font-size: 30px;
 }
 
+.footer-address {
+	padding: 0 0 0 0;
+	margin: 0 0 5px;
+	font-size: 14px;
+	font-weight: 300;
+	letter-spacing: 2px;
+    text-transform: uppercase;}
+    
 .footer-copy {
-	padding: 30px 0 0;
+	padding: 0 0 0 0;
 	margin: 0 0 5px;
 	font-size: 14px;
 	font-weight: 300;
